# agent-scraper

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING.md  aws_credentials.json.example  gcp_credentials.json.example  pyproject.toml  run_test.py  simple_test.py  test_example.py
data/raw/: .gitkeep
examples/: basic_usage.py  storage_examples.py
src/municipal_scraper/: __init__.py  data_models.py  protocol_scraper.py  target_discovery.py  test_amt_mittelholstein.py
src/scraper/: __init__.py  browser.py  models.py  scraper.py  storage.py
tests/: test_scraper.py
